--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,3 +1,3 @@
 configuracion.texto=Configurando entorno Desarrollo ...
-configuracion.autor.nombre=Jhon Doe
-configuracion.autor.email=jhon.doe@correo.com
+configuracion.autor.nombre=Milton Sanchez
+configuracion.autor.email=milton.sanchez@correo.com
