--- a/servicio-productos-dev.properties
+++ b/servicio-productos-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/db_springboot_cloud?serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://microservicios-mysql8:3306/db_springboot_cloud?serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
